oswee/https-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: prime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      imagePullSecrets:
        - name: my-registry-key
      containers:
        - name: hello-webserver
          image: webserver:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 443
          volumeMounts:
            - mountPath: '/data'
              name: my-pv-storage
            - mountPath: '/tls'
              name: tls
          args:
            - '-d=/data'
            - '-p=443'
      volumes:
        - name: my-pv-storage
          persistentVolumeClaim:
            claimName: my-pv-claim
        - name: tls
          secret:
            secretName: my-tls-secret
