oswee/https-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
  namespace: prime
  labels:
    app: http-server
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80 # Host
  selector:
    app: http-server
