oswee/https-server/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-server-gateway
  namespace: prime
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: TLS
      hosts:
        - 'server.apps.ocp.oswee.com'
