oswee/https-server/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: https-server-virtual-service
  namespace: prime
spec:
  hosts:
    - server.apps.ocp.oswee.com
  gateways:
    - https-server-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: https-server-service
            # port:
            #   number: 80
